# vklelu

./: .gitignore  .gitmodules  CMakeLists.txt  getvsenv.bat  kultainenapina.mtl  main.cc  rgb_triangle.vert  shader.frag  shader.vert  struct_helpers.hh  triangle.vert  utils.cc  utils.hh  vklelu.cc  vklelu.hh
src/: context.cc  context.hh  himmeli.cc  himmeli.hh  lib_impl.cc  main.cc  memory.cc  memory.hh  struct_helpers.hh  utils.cc  utils.hh  vklelu.cc  vklelu.hh  vklelu_init.cc
src/glsl/: shader.frag  shader.vert
